--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,6 @@
 ASM=yasm 
-KenerlEntry=0x30400			# ; 必须与boot/loader.asm中一致
+KenerlEntry=0x30400	# 必须与boot/loader.asm中一致
+ASMFLAGS= -f elf
 
 run/os.img:run/boot.bin run/loader.bin  run/kernel.bin run/kernel.bin.asm
 	dd if=/dev/zero of=$@ bs=1024 count=1440
@@ -10,27 +11,32 @@ run/os.img:run/boot.bin run/loader.bin  run/kernel.bin run/kernel.bin.asm
 	sudo umount /mnt/floppy
 
 run/boot.bin:boot/boot.asm boot/fat12.inc boot/lib.inc
-	$(ASM)   $< -o $@ 
+	$(ASM) $< -o $@ 
 
 run/loader.bin:boot/loader.asm boot/fat12.inc boot/lib.inc boot/pm.inc
-	$(ASM)   $< -o $@ 
+	$(ASM) $< -o $@ 
 
-run/kernel.bin:run/kernel.o run/klibc.o
+run/kernel.bin:run/kernel.o run/main.o run/kliba.o run/keyboard.o
 	ld -m elf_i386 -s -Ttext $(KenerlEntry) $^ -o $@ 
 
-run/kernel.o:kernel/kernel.asm kernel/klibc.c
-	$(ASM)  -f elf $< -o $@
+run/kernel.o:kernel/kernel.asm  
+	$(ASM) $(ASMFLAGS) $< -o $@
 
-run/klibc.o:kernel/klibc.c kernel/kernel.asm
-	gcc -m32 -fno-stack-protector -c $< -o $@ 
+run/kliba.o:kernel/kliba.asm   
+	$(ASM) $(ASMFLAGS) $< -o $@
+
+run/keyboard.o: kernel/keyboard.c kernel/types.h kernel/keyboard.h
+	gcc -m32 -fno-stack-protector -c $< -o $@
+run/main.o: kernel/main.c kernel/main.h kernel/types.h kernel/keyboard.h
+	gcc -m32 -fno-stack-protector -c $< -o $@
 
 run/kernel.bin.asm:run/kernel.bin 
-	ndisasm $<  -o $(KenerlEntry) -u -e 0x400 > $@ 
+	ndisasm $< -o $(KenerlEntry) -u -e 0x400 > $@ 
 
 clean:
-	rm -f run/*.bin run/*.o  run/bochsout.txt run/os.img
+	rm -f run/*.bin run/*.o run/bochsout.txt run/os.img
 
-compile:run/boot.bin run/loader.bin  run/kernel.bin run/kernel.bin.asm
+compile:run/boot.bin run/loader.bin run/kernel.bin run/kernel.bin.asm
 
 run:run/os.img
 	bochs -q -f run/bochsrc -rc run/debug.txt
