内核入口地址应从ELF header中读取

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ src/test/*
 src/run/kernel.bin.asm
 src/.vscode/settings.json
 src/run/.fuse_hidden*
+src/run/hd.img.backup
+src/run/loader.bin.asm
